# codegraph-lib

./: Cargo.toml  Makefile  README.md  build.rs  code_graph.json  index.html
src/: lib.rs  main.rs
src/code_graph/: mod.rs  node.rs  relationship.rs
src/indexing/: analyzer.rs  mod.rs  processor.rs
src/indexing/extractor/: common.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/parsers/: common.rs  mod.rs
src/parsers/treesitter/: bindings.rs  extractor.rs  languages.rs  mod.rs
src/parsers/treesitter/queries/: cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/utils/: io.rs
