[package]
name = "relik_codegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.10"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
walkdir = "2.5.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"

[build-dependencies]
cc = "1.0"
